 # [#30947] Bugs at the debug console if i select some images (e.g. the offline image at the global configuration).  Thanks Tobias Zulauf
 ^ [#30898] Corrects styling issues with mod_articles_category by removing h tags.  Thanks Seth Warburton
 # [#30949] Feed module generates empty list for non-existing entries.  Thanks Radek Suski
 # [#30833] Fixes issues from #29922.  Thanks George Wilson

13-May-2013 Jean-Marie Simonet
 $ Updating ko-KR installation language
 #$ [#30740] Site name tooltip not translatable correctly
 # [#30812] *No Joomla Version is display at isis bottom
 ^ [#30663] Default Value for the Option Show Sub-menu Items to be Set as Yes. Thanks Mig
 # [#30873] *Multilanguage: PHP warning when logging.

08-May-2013 Mark Dexter
 # [#30125] Search module does not take into account the 'search only' selected. Thanks Luke Collymore.
 # [#30769] Still There are Reference to Joomla! 3.0 Version in 3.1. Thanks Jean-Marie Simonet.
 # [#28288] Unnesessary initialiazing of tooltips in category blog. Thanks Dennis Hermatski.
 # [#30394] *Javascript translations are not available if caching is enabled. Thanks Dennis Hermatski.

07-May-2013 Mark Dexter
 # Revert [#30125] Search module does not take into account the 'search only' selected. Breaks search.
 # [#30729] Template Editor does not Display well in FireFox. Thanks Aleksander Linkov.
 # [#30691] TinyMCE shows buttons with onclick attribute without space and duplicate class. Thanks Dennis Hermatski.
 # [#30125] Search module does not take into account the 'search only' selected. Thanks Brian Teeman.
 # [#30797] *Wrapper module url field should be required. Thanks Jean-Marie Simonet.
 # [#30017] Problems with calendar pop up in Chrome. Thanks Achal Aggarwal.
 # [#30800] Blog item is not rendering intro image. Thanks David Hurley.
 # [#30787] Select Tags filter cannot be translated correctly. Thanks Elin Waring.
 # [#30431] Removed unused css file: editor_content.css. Thanks Nick Savov.