@@ -202,7 +202,7 @@ JHtml::_('formbehavior.chosen', 'select');
 				</div>
 				<div class="control-group">
 					<?php foreach ($this->form->getFieldset('jmetadata') as $field) : ?>
-						<?php if ($field->name == 'jform[metadata][tags][]') :?>
+						<?php if ($this->typeId && $field->name == 'jform[metadata][tags][]') :?>
 						<div class="control-group">
 							<div class="control-label"><?php echo $field->label; ?></div>
 							<div class="controls"><?php echo $field->input; ?></div>
