@@ -66,6 +66,10 @@ class CategoriesViewCategory extends JViewLegacy
 		$isNew		= ($this->item->id == 0);
 		$checkedOut	= !($this->item->checked_out == 0 || $this->item->checked_out == $userId);
 
+		// Check to see if the type exists
+		$ucmType = new JUcmType;
+		$this->typeId = $ucmType->getTypeId($extension . '.category');
+
 		// Avoid nonsense situation.
 		if ($extension == 'com_categories')
 		{
